# Excises

./: .clang-format  .gitignore  BinaryTree.h  CMakeLists.txt  Main.cpp  README.md  VerifyCleanup.h  unltle.h
Algorithm/: AmountData.cpp  AmountData.md  AmountFOfData.cpp  AmountFOfData.md  AndCheckTheSet.cpp  AndCheckTheSet.md  ArithmeticProgression.cpp  CMakeLists.txt  DataStructPresonal.cpp  DestinationArray.cpp  DichotomyList.cpp  DoublePointer.cpp  DynamicPro.cpp  Graph.cpp  Graph.md  ListAlgorithm.cpp  MonotonousQueue.cpp  MonotonousStack.cpp  PrefixTree.cpp  Recursion.cpp  SetWindowRgn.cpp
AmountFOfData/: AmountFOfData.md
AndCheckTheSet/: AndCheckTheSet.h
Argorithm/: DestinationArray.cpp  DestinationArray.h
Basefile/: BinaryTree.cc  BitSet.cc  CMakeLists.txt  ListProblem.cc
DataStructPresonal/: DataStructPresonal.h
DichotomyList/: DichotomyList.cpp  DichotomyList.h
DoublePointer/: DoublePointer.h
Graph/: Graph.h  Graph.md
ListAlgorithm/: ListAlgorithm.cpp  ListAlgorithm.h
MonotonousQueue/: MonotonousQueue.cpp
MonotonousStack/: MonotonousStack.cpp
PrefixTree/: PrefixTree.cpp  PrefixTree.h
Recursion/: Recursion.h
SetWindowRgn/: SetWindowRgn.cpp  SetWindowRgn.h
Test/: BinaryTree_t.cc  CMakeLists.txt  ListProblem_t.cc  RandNum_t.cc
include/: BinaryTree.h  BitSet.h  ListProblem.h  RandomNum.h  VerifyCleanup.h  unltle.h
include/Algorithm/: AmountData.h  AndCheckTheSet.h  ArithmeticProgression.h  DataStructPresonal.h  DestinationArray.h  DichotomyList.h  DoublePointer.h  DynamicPro.h  Graph.h  ListAlgorithm.h  MonotonousQueue.h  MonotonousStack.h  PrefixTree.h  Recursion.h  SetWindowRgn.h
test/: BitSet_t.cc  CMakeLists.txt  RandNum_t.cc
test/algtest/: Amount_t.cc
